--- a/Birds/Settings.bundle/Root.plist
+++ b/Birds/Settings.bundle/Root.plist
@@ -16,6 +16,26 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>Sort By</string>
+			<key>Key</key>
+			<string>sortBy</string>
+			<key>DefaultValue</key>
+			<integer>0</integer>
+			<key>Values</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+			</array>
+			<key>Titles</key>
+			<array>
+				<string>Name</string>
+				<string>Category</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
