--- a/Birds/Settings.bundle/Root.plist
+++ b/Birds/Settings.bundle/Root.plist
@@ -36,6 +36,16 @@
 				<string>Category</string>
 			</array>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Hide Category</string>
+			<key>Key</key>
+			<string>hideBirdCategory</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 </dict>
 </plist>
